--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -29,6 +29,13 @@
             android:textSize="20sp"/>
 
         <TextView
+            android:id="@+id/movie_detail_overview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:textSize="16sp" />
+
+        <TextView
             android:id="@+id/movie_detail_release_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
